data rendered from api, styles redone

--- a/public/index.html
+++ b/public/index.html
@@ -1,142 +1,12 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Roger Galan Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-
-			<div id="wrapper">
-
-				<!-- Nav -->
-					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Experience</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Me -->
-							<article id="home" class="panel intro">
-								<header>
-									<h1>Roger Galan</h1>
-									<p>IT Service Desk</p>
-								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me_river.jpg" alt="" />
-								</a>
-							</article>
-
-						<!-- Work -->
-							<article id="work" class="panel">
-								<header>
-									<h2>Experience</h2>
-								</header>
-								<h3>IT Service Desk - Shift Lead</h3>
-								<h3><em>BYU-Idaho</em></h3>
-								<p>
-									Protected user data information by leading 4+ IT staff members for fulfillment of administrative tasks,
-									maintaining detailed and accurate records, and problem-solving with troubleshooting procedures. Achieved consistent monthly team performance above 90% by adapting training methods, proactive monitoring,
-									and compiling bi-weekly status reports.
-								</p>
-								<h3>Rex-Ride</h3>
-								<h3><em>MLH Hackathon</em></h3>
-								<a href="https://github.com/HeyChriss/RexRide/tree/main/rexride">Rex-Ride Repository</a>
-								<p>
-									Collaborated with a team of 3 for 24-hour hackathon to rapidly develop a web-based ride-sharing platform,
-									enabling users to efficiently find or offer travel assistance.
-									Implemented a back-end infrastructure using Python, Flask framework, and Google Firebase, creating RESTful
-									APIs for data authentication, retrieval, and updates from a non-relational database within Firebase.
-								</p>
-								<h3>Instagram Full-Stack Copy</h3>
-								<h3><em>Personal Project - In Progress</em></h3>
-								<a href="https://github.com/roger18gm/ig-clone">IG Clone Repository</a>
-								<p>
-									Utilizing React library, Chakra CSS library, and Javascript to deploy a single-page social media platform capable
-									of displaying user posts, account login, account creation, and user profiles.
-									SQL implementation planned for backend user data storage and AWS Amplify or S3 for hosting.
-								</p>
-								<h3>Moovee Front-end Website</h3>
-								<h3><em>BYU-Idaho: Dynamic Web Fundamentals Course</em></h3>
-								<a href="https://roger18gm.github.io/wdd131/review/index.html">Moovees Website</a>		
-								<p>
-									Produced a JavaScript-driven website by leveraging JSX for efficient component rendering, data filtering, and
-									dynamically generating new web pages based on URL parameters to populate user search results.
-									Achieved desktop performance and accessibility score of 95% by utilizing responsive design techniques, ensuring
-									optimal user experience across various devices to enhance user interaction.
-								</p>
-										<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="./images/igCloneSnap.png" class="image fit"><img src="images/igCloneSnap.png" alt="Screenshot of Instagram Clone App"></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="./images/RexRideSnap.jpg" class="image fit"><img src="images/RexRideSnap.jpg" alt="Group photo of Hackathon project"></a>
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<section>
-									<ul class="social-icons">
-										<li><a href="https://www.linkedin.com/in/roger-galan-manzano-819babb9/" class="icon"><img src="assets/icons/linkedin.svg" alt="LinkedIn" /></a></li>
-										<li><a href="https://github.com/roger18gm?tab=repositories" class="icon"><img src="assets/icons/github.svg" alt="GitHub" /></a></li>
-										<li><a href="mailto:roger18gm@gmail.com" class="icon"><img src="assets/icons/gmail.svg" alt="Email" /></a></li>
-										</ul>
-								</section>
-								<form action="" method="POST">
-                                    <div class="g-recaptcha" data-sitekey="6LeXeYgqAAAAAHRIE7i9FVR_Log7fmYgfOpo1tDj"></div>
-									<br/>
-                                    <div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="email" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<button type="submit">Send Message</button>
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; Roger Galan.</li>
-						</ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-            <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	</body>
+  <head>
+    <title>Roger Galan Portfolio</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+  </head>
+  <body class="is-preload"></body>
 </html>
